...
    init(itemService: ItemServiceType, mode: ItemMode) {
        self.itemService = itemService
        self.mode = mode

        switch mode {
        case .new(let transaction):
            self.initialState = State(title: "New", buttonTitle: "추가", transaction: transaction)
        case .edit(let item):
            self.initialState = State(title: "Edit", buttonTitle: "수정", itemTitle: item.title, itemCost: item.cost, itemDate: item.date, transaction: item.transaction, isSubmitButtonEnabled: true, isDeleteButtonHidden: false)
        }
    }

    enum Action {
...
